2014-04-07  Alexander V. Lukyanov <lavv17f@gmail.com>

	* misc.cc: add EIO and EPIPE to the list of temp network errors.

2014-03-26  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Job.cc, Job.h: (FormatShortStatus) new virtual method; don't check
	  Deleted() for jobs in the lists; use xlist_for_each_safe when it's
	  possible to remove scanned node from the list.
	* MirrorJob.cc, MirrorJob.h: implement FormatShortStatus.
	* CopyJob.cc: use Speedometer::GetStrProper for final rate reporting.

2014-03-25  Alexander V. Lukyanov <lavv17f@gmail.com>

	* pgetJob.h: fixed bytes and rate reporting via Get methods.
	* Job.cc, Job.h: use xlist; add children_jobs list; (NumberOfChildrenJobs) new method.
	* commands.cc, CmdExec.cc: use NumberOfChildrenJobs to avoid counting "this" Job.

2014-03-24  Alexander V. Lukyanov <lavv17f@gmail.com>

	* buffer.cc: (MoveDataHere) set eof only when all data are exhausted.
	* misc.cc, misc.h: (xhuman) new function.
	* Job.cc, Job.h: (GetTransferRate) new method;
	  (GetBytesCount) count recursively over descendants.
	* CopyJob.cc, CopyJob.h, FileCopy.h: (GetTransferRate) implement;
	  (GetTimeSpent) don't count overlapped time intervals twice;
	  (GetBytesCount) count recursively for real time monitoring.
	* MirrorJob.cc, MirrorJob.h: show real-time bytes transferred and
	  rate in the mirror job title.
	* HttpDir.cc: try to parse as plain html when props format is unrecognized.

2014-03-18  Sami Farin <sami.farin@gmail.com>

	* FileSet.cc, FtpDirList.cc, Http.cc, PollVec.cc, complete.cc, lftp.cc:
	  fix warnings

2014-03-18  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FileAccess.h, mkdirJob.h, FindJob.h: don't access the
	  FileAccessRefC ref in dtor, as the original FileAccessRef can be
	  already deleted.
	* FindJob.cc: don't add slash for plain files in URLs.

2014-03-17  Alexander V. Lukyanov <lavv17f@gmail.com>

	* resource.cc: add hftp:decode setting.
	* xarray.cc, xarray.h: use xrealloc instead of realloc; truncate